--- a/Clock.html
+++ b/Clock.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Clock.css">
     <title>Clock Homework</title>
 </head>
-<body class="background-color">
+<body>
     <div class="clock">
         <div class="hours">12</div>
         <div>:</div>
