--- a/Clock.html
+++ b/Clock.html
@@ -8,11 +8,7 @@
     <title>Clock Homework</title>
 </head>
 <body>
-    <div class="clock">
-        <div class="hours">12</div>
-        <div>:</div>
-        <div class="mins">00</div>
-    </div>
+    <div id="clock">12:00:00</div>
     <script src="Clock.js"></script>
 </body>
 </html>
